# serialport-stream-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: read_stream.rs  tokio_async_read.rs  tokio_async_rw.rs  tokio_async_write.rs  tokio_example.rs  tokio_read_stream.rs
src/: lib.rs  line_settings.rs  stream.rs  types.rs
src/platform/: mod.rs  unix.rs  windows.rs
src/platform/unix/: mod.rs  serial.rs
src/platform/windows/: comm.rs  mod.rs
